[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/gameWin/GameWin.gd" type="Script" id=1]
[ext_resource path="res://fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/montserrat_eb_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://game/gameWin/1 Hour Of 8-bit Music win.wav" type="AudioStream" id=4]

[node name="GameWin" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.686275 )
show_behind_parent = true
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.12549, 0.976471, 0.0745098, 0.686275 )

[node name="GameOverText" type="Label" parent="."]
margin_left = 340.0
margin_top = 148.0
margin_right = 740.0
margin_bottom = 193.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 2 )
text = "Congratulation!"
align = 1

[node name="YourAreDeadText" type="Label" parent="."]
margin_left = 340.0
margin_top = 280.0
margin_right = 740.0
margin_bottom = 306.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 3 )
text = "You have defeated the great CHTOUNE!"
align = 1
valign = 1
autowrap = true

[node name="Buttons" type="Node2D" parent="."]

[node name="MainMenuButton" type="Button" parent="Buttons"]
margin_left = 440.0
margin_top = 500.0
margin_right = 840.0
margin_bottom = 551.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Main menu"

[node name="ExitButton" type="Button" parent="Buttons"]
margin_left = 440.0
margin_top = 600.0
margin_right = 840.0
margin_bottom = 651.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="visibility_changed" from="." to="." method="_on_GameWin_visibility_changed"]
[connection signal="pressed" from="Buttons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_Exit_pressed"]
